# helm

./: CMakeLists.txt  README.md  helm.jucer
JUCE/modules/juce_graphics/colour/: juce_PixelFormats.h
JUCE/modules/juce_opengl/native/: juce_OpenGL_linux_X11.h
JuceLibraryCode/: AppConfig.h  JuceHeader.h
builds/linux/LV2/: Makefile.binary
builds/linux/VST/: Makefile
builds/osx/Helm.xcodeproj/: project.pbxproj
builds/vs17/: Helm_SharedCode.vcxproj  Helm_SharedCode.vcxproj.filters  Helm_VST.vcxproj  Helm_VST3.vcxproj
concurrentqueue/: CMakeLists.txt
mopo/: CMakeLists.txt
src/common/: border_bounds_constrainer.h  file_list_box_model.h  helm_common.h  load_save.cpp  load_save.h  midi_manager.h  startup.cpp  startup.h  synth_base.cpp  synth_base.h  synth_gui_interface.cpp  synth_gui_interface.h
src/editor_components/: bpm_slider.h  filter_response.cpp  filter_response.h  filter_selector.h  global_tool_tip.h  graphical_envelope.h  graphical_step_sequencer.cpp  graphical_step_sequencer.h  midi_keyboard.h  modulation_button.h  modulation_highlight.h  modulation_meter.h  modulation_slider.h  open_gl_background.cpp  open_gl_background.h  open_gl_component.h  open_gl_envelope.cpp  open_gl_envelope.h  open_gl_modulation_meter.h  open_gl_oscilloscope.cpp  open_gl_oscilloscope.h  open_gl_peak_meter.cpp  open_gl_peak_meter.h  open_gl_wave_viewer.cpp  open_gl_wave_viewer.h  oscilloscope.cpp  oscilloscope.h  overlay.h  patch_selector.cpp  patch_selector.h  retrigger_selector.h  synth_button.h  synth_slider.h  tempo_selector.h  text_selector.h  text_slider.h  wave_selector.h  wave_viewer.cpp  wave_viewer.h  xy_pad.cpp  (+1 more)
src/editor_sections/: about_section.cpp  about_section.h  arp_section.cpp  arp_section.h  bpm_section.cpp  bpm_section.h  contribute_section.cpp  contribute_section.h  delay_section.cpp  delay_section.h  delete_section.cpp  delete_section.h  distortion_section.cpp  distortion_section.h  dynamic_section.cpp  dynamic_section.h  envelope_section.cpp  envelope_section.h  extra_mod_section.cpp  extra_mod_section.h  feedback_section.cpp  feedback_section.h  filter_section.cpp  filter_section.h  formant_section.cpp  formant_section.h  full_interface.cpp  full_interface.h  lfo_section.cpp  lfo_section.h  mixer_section.cpp  mixer_section.h  modulation_manager.cpp  modulation_manager.h  noise_section.cpp  noise_section.h  open_gl_modulation_manager.cpp  open_gl_modulation_manager.h  oscillator_section.cpp  oscillator_section.h  (+21 more)
src/look_and_feel/: browser_look_and_feel.h  colors.h  default_look_and_feel.h  fonts.h  modulation_look_and_feel.h  shaders.cpp  text_look_and_feel.h
src/plugin/: helm_editor.cpp  helm_editor.h  helm_plugin.cpp  helm_plugin.h  value_bridge.h
src/standalone/: helm_computer_keyboard.h  helm_editor.cpp  helm_editor.h  main.cpp
standalone/: helm.jucer
standalone/JuceLibraryCode/: AppConfig.h  JuceHeader.h
standalone/builds/linux/: Makefile
standalone/builds/osx/Helm.xcodeproj/: project.pbxproj
standalone/builds/vs17/: Helm_App.vcxproj  Helm_App.vcxproj.filters
